--- a/frontend/src/app/header/header.component.html
+++ b/frontend/src/app/header/header.component.html
@@ -13,7 +13,12 @@
       <a (click)="navigirajNaProfil()" routerLink="profil">Profil</a>
     </li>
     <li>
-      <a (click)="navigirajNaPocetnu()" routerLink="">Početna</a>
+      <a (click)="navigirajNaPocetnu()" routerLink="">Pocetna</a>
+    </li>
+    <li>
+      <a (click)="navigirajNaMojeTurnire()" routerLink="mojiTurniri"
+        >Moji turniri</a
+      >
     </li>
     <li *ngIf="trenutnoPrijavljeniKorisnik$ | async as prijavljeniKorisnik">
       <ng-container *ngIf="prijavljeniKorisnik.role === 'igrac'">
