--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -6,7 +6,7 @@
   <ul>
     <li *ngFor="let turnir of sviTurniri$ | async">
       <app-turnir [turnir]="turnir"></app-turnir>
-      <ng-container *ngIf="trenutnoPrijavljeniKorisnik$ | async as korisnik">
+      <!-- <ng-container *ngIf="trenutnoPrijavljeniKorisnik$ | async as korisnik">
         <button (click)="prikaziPrijavljeneTimove(turnir.id)">
           Prijavljeni timovi
         </button>
@@ -16,10 +16,10 @@
         <ng-container *ngIf="korisnik.role === 'organizator'">
           <button (click)="obrisiTurnir(turnir.id)">Obrisi turnir</button>
         </ng-container>
-      </ng-container>
+      </ng-container> -->
     </li>
   </ul>
-  <ul *ngIf="!pretragaIzvrsena">
+  <!-- <ul *ngIf="!pretragaIzvrsena">
     <li>Ovde ce se prikazati turniri nakon pretrage</li>
   </ul>
   <ul *ngIf="pretragaIzvrsena">
@@ -40,5 +40,5 @@
         </ng-container>
       </ng-container>
     </li>
-  </ul>
+  </ul> -->
 </div>
