--- a/frontend/src/app/timovi-na-turniru/timovi-na-turniru.component.html
+++ b/frontend/src/app/timovi-na-turniru/timovi-na-turniru.component.html
@@ -3,7 +3,11 @@
     <h2>Prijavljeni timovi</h2>
     <li *ngFor="let prijava of prijave$ | async">
       <h3>{{ prijava.nazivTima }}</h3>
-      <button (click)="izbaciTimSaTurnira(prijava.id)">Izbaci tim</button>
+      <ng-container *ngIf="trenutnoPrijavljeniKorisnik$ | async as korisnik">
+        <ng-container *ngIf="korisnik.role == 'organizator'">
+          <button (click)="izbaciTimSaTurnira(prijava.id)">Izbaci tim</button>
+        </ng-container>
+      </ng-container>
       <app-igrac
         *ngFor="let igrac of prijava.igraci"
         [igrac]="igrac"
