--- a/frontend/src/app/turnir/turnir.component.html
+++ b/frontend/src/app/turnir/turnir.component.html
@@ -14,9 +14,11 @@
         </button>
         <ng-container *ngIf="korisnik.role === 'igrac'">
           <button (click)="prijaviSeNaTurnir(turnir)">Prijavi se</button>
-          <button (click)="vidiSaigrace(turnir.id, korisnik.id)">
-            Vidi saigrace
-          </button>
+          <ng-container>
+            <button (click)="vidiSaigrace(turnir.id, korisnik.id)">
+              Vidi saigrace
+            </button>
+          </ng-container>
         </ng-container>
         <!-- <ng-container *ngIf="korisnik.role === 'organizator'">
           <button (click)="obrisiTurnir(turnir.id)">Obrisi turnir</button>
