--- a/frontend/src/app/search-bar/search-bar.component.html
+++ b/frontend/src/app/search-bar/search-bar.component.html
@@ -1,5 +1,5 @@
 <!-- search-bar.component.html -->
-<form>
+<form class="search-form">
   <div class="form-group">
     <label for="naziv">Naziv:</label>
     <input
@@ -24,51 +24,55 @@
     />
   </div>
 
-  <div class="form-group">
-    <label for="pocetniDatum">Početni datum:</label>
-    <input
-      type="date"
-      id="pocetniDatum"
-      name="pocetniDatum"
-      [(ngModel)]="pretragaPocetniDatum"
-      class="form-control"
-    />
+  <div class="date-group">
+    <div class="form-group">
+      <label for="pocetniDatum">Početni datum:</label>
+      <input
+        type="date"
+        id="pocetniDatum"
+        name="pocetniDatum"
+        [(ngModel)]="pretragaPocetniDatum"
+        class="form-control"
+      />
+    </div>
+    <div class="form-group">
+      <label for="krajnjiDatum">Krajnji datum:</label>
+      <input
+        type="date"
+        id="krajnjiDatum"
+        name="krajnjiDatum"
+        [(ngModel)]="pretragaKrajnjiDatum"
+        class="form-control"
+      />
+    </div>
   </div>
-  <div class="form-group">
-    <label for="krajnjiDatum">Krajnji datum:</label>
-    <input
-      type="date"
-      id="krajnjiDatum"
-      name="krajnjiDatum"
-      [(ngModel)]="pretragaKrajnjiDatum"
-      class="form-control"
-    />
+
+  <div class="price-group">
+    <div class="form-group">
+      <label for="pocetnaNagrada">Pocetna nagrada</label>
+      <input
+        type="number"
+        id="pocetnaNagrada"
+        name="pocetnaNagrada"
+        [(ngModel)]="pretragaPocetnaNagrada"
+        placeholder="donji opseg nagrade"
+        class="form-control"
+      />
+    </div>
+    <div class="form-group">
+      <label for="krajnjaNagrada">Krajnja nagrada </label>
+      <input
+        type="number"
+        id="krajnjaNagrada"
+        name="krajnjaNagrada"
+        [(ngModel)]="pretragaKrajnjaNagrada"
+        placeholder="donji opseg nagrade"
+        class="form-control"
+      />
+    </div>
   </div>
 
   <div class="form-group">
-    <label for="pocetnaNagrada">Pocetna nagrada</label>
-    <input
-      type="number"
-      id="pocetnaNagrada"
-      name="pocetnaNagrada"
-      [(ngModel)]="pretragaPocetnaNagrada"
-      placeholder="donji opseg nagrade"
-      class="form-control"
-    />
-  </div>
-  <div class="form-group">
-    <label for="krajnjaNagrada">Krajnja nagrada </label>
-    <input
-      type="number"
-      id="krajnjaNagrada"
-      name="krajnjaNagrada"
-      [(ngModel)]="pretragaKrajnjaNagrada"
-      placeholder="donji opseg nagrade"
-      class="form-control"
-    />
+    <button (click)="filtrirajTurnire()">Pretraga</button>
   </div>
 </form>
-
-<div class="form-group">
-  <button (click)="filtrirajTurnire()">Pretraga</button>
-</div>
