--- a/frontend/src/app/svi-igraci/svi-igraci.component.html
+++ b/frontend/src/app/svi-igraci/svi-igraci.component.html
@@ -1,22 +1,33 @@
-<h2>igraci</h2>
-<label for="uneseniIgrac"> Unesite ime igraca</label>
-<input
-  type="text"
-  id="uneseniIgrac"
-  [(ngModel)]="uneseniIgrac"
-  name="uneseniIgrac"
-/>
-<button (click)="pretraziIgrace(uneseniIgrac)">Pretrazi</button>
-<ul *ngIf="!(pretragaIgraci$ | async)?.length">
-  <li *ngFor="let igrac of sviIgraci$ | async">
+<h2 class="section-title">Igrači</h2>
+<div class="search-container">
+  <label for="uneseniIgrac">Unesite ime igrača</label>
+  <input
+    type="text"
+    id="uneseniIgrac"
+    [(ngModel)]="uneseniIgrac"
+    name="uneseniIgrac"
+    class="search-input"
+  />
+  <button (click)="pretraziIgrace(uneseniIgrac)" class="search-button">
+    Pretraži
+  </button>
+</div>
+<ul class="player-list" *ngIf="!(pretragaIgraci$ | async)?.length">
+  <li *ngFor="let igrac of sviIgraci$ | async" class="player-item">
     <app-igrac [igrac]="igrac"></app-igrac>
-    <button (click)="dodajIgracaUtim(igrac)">Dodaj u tim</button>
+    <button (click)="dodajIgracaUtim(igrac)" class="add-button">
+      Dodaj u tim
+    </button>
   </li>
 </ul>
-<ul>
-  <li *ngFor="let igrac of pretragaIgraci$ | async">
+<ul class="player-list">
+  <li *ngFor="let igrac of pretragaIgraci$ | async" class="player-item">
     <app-igrac [igrac]="igrac"></app-igrac>
-    <button (click)="dodajIgracaUtim(igrac)">Dodaj u tim</button>
+    <button (click)="dodajIgracaUtim(igrac)" class="add-button">
+      Dodaj u tim
+    </button>
   </li>
 </ul>
-<button (click)="navigirajNaPreference()">Preference</button>
+<button (click)="navigirajNaPreference()" class="preference-button">
+  Preference
+</button>
