--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -4,8 +4,17 @@
 <div class="container">
   <h3>Turniri</h3>
   <ul class="turnir-list">
-    <li *ngFor="let turnir of sviTurniri$ | async">
-      <app-turnir [turnir]="turnir"></app-turnir>
-    </li>
+    <ng-container *ngIf="pretragaIzvrsena">
+      <p>pretraga je izvrsena</p>
+      <li *ngFor="let turnir of filtriraniTurniri">
+        <app-turnir [turnir]="turnir"></app-turnir>
+      </li>
+    </ng-container>
+    <!-- Prikaz svih turnira ako nema rezultata pretrage -->
+    <ng-container *ngIf="!pretragaIzvrsena">
+      <li *ngFor="let turnir of sviTurniri$ | async">
+        <app-turnir [turnir]="turnir"></app-turnir>
+      </li>
+    </ng-container>
   </ul>
 </div>
