--- a/frontend/src/app/header/header.component.html
+++ b/frontend/src/app/header/header.component.html
@@ -20,13 +20,13 @@
         >Moji turniri</a
       >
     </li>
-    <!-- <li *ngIf="trenutnoPrijavljeniKorisnik$ | async as prijavljeniKorisnik">
+    <li *ngIf="trenutnoPrijavljeniKorisnik$ | async as prijavljeniKorisnik">
       <ng-container *ngIf="prijavljeniKorisnik.role === 'igrac'">
         <a (click)="navigirajNaPrijavu()" routerLink="prijava"
           >Pregledaj prijavu</a
         >
       </ng-container>
-    </li> -->
+    </li>
     <li *ngIf="!(trenutnoPrijavljeniKorisnik$ | async)"></li>
 
     <li *ngIf="!(trenutnoPrijavljeniKorisnik$ | async)"></li>
