--- a/frontend/src/app/profil/profil.component.html
+++ b/frontend/src/app/profil/profil.component.html
@@ -13,7 +13,7 @@
   <input
     type="text"
     id="korisnickoIme"
-    [value]="prijavljeniKorisnik.korisnickoIme"
+    [(ngModel)]="korisnickoIme"
     [readonly]="!uredjivanjeOmoguceno"
   />
 
