--- a/frontend/src/app/search-bar/search-bar.component.html
+++ b/frontend/src/app/search-bar/search-bar.component.html
@@ -49,24 +49,24 @@
 
   <div class="price-group">
     <div class="form-group">
-      <label for="pocetnaNagrada">Maksimalna vrednost nagrade</label>
+      <label for="pocetnaNagrada">Minimalna vrednost nagrade</label>
       <input
         type="number"
         id="pocetnaNagrada"
         name="pocetnaNagrada"
         [(ngModel)]="pretragaPocetnaNagrada"
-        placeholder="Unesite maksimalnu vrednost nagrade"
+        placeholder="Unesite minimalnu vrednost nagrade"
         class="form-control"
       />
     </div>
     <div class="form-group">
-      <label for="krajnjaNagrada">Minimalna vrednost nagrade</label>
+      <label for="krajnjaNagrada">Maksimalna vrednost nagrade</label>
       <input
         type="number"
         id="krajnjaNagrada"
         name="krajnjaNagrada"
         [(ngModel)]="pretragaKrajnjaNagrada"
-        placeholder="Unesite minimalnu vrednost nagrade"
+        placeholder="Unesite maksimalnu vrednost nagrade"
         class="form-control"
       />
     </div>
