--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -4,21 +4,14 @@
 <div class="container">
   <h3>Turniri</h3>
   <ul class="turnir-list">
-    <ng-container *ngIf="pretragaIzvrsena">
-      <p>pretraga je izvrsena</p>
-      <!-- <li *ngFor="let turnir of filtriraniTurniri">
+    <!-- <ng-container *ngIf="pretragaIzvrsena"> -->
+
+    <!-- <li *ngFor="let turnir of filtriraniTurniri">
         <app-turnir [turnir]="turnir"></app-turnir>
       </li> -->
-      <p>ovo je store</p>
-      <li *ngFor="let turnir of turniriStore$ | async">
-        <app-turnir [turnir]="turnir"></app-turnir>
-      </li>
-    </ng-container>
-    <!-- Prikaz svih turnira ako nema rezultata pretrage -->
-    <!-- <ng-container *ngIf="!pretragaIzvrsena">
-      <li *ngFor="let turnir of sviTurniri$ | async">
-        <app-turnir [turnir]="turnir"></app-turnir>
-      </li>
-    </ng-container> -->
+    <li *ngFor="let turnir of turniriStore$ | async">
+      <app-turnir [turnir]="turnir"></app-turnir>
+    </li>
+    <!-- </ng-container> -->
   </ul>
 </div>
