--- a/frontend/src/app/registracija/registracija.component.html
+++ b/frontend/src/app/registracija/registracija.component.html
@@ -34,7 +34,7 @@
       />
     </div>
     <div>
-      <label for="lozinka">lozinka</label>
+      <label for="lozinka">Lozinka:</label>
       <input
         type="password"
         id="lozinka"
