--- a/frontend/src/app/turnir/turnir.component.html
+++ b/frontend/src/app/turnir/turnir.component.html
@@ -3,7 +3,7 @@
   <p>Datum održavanja: {{ turnir.datumOdrzavanja }}</p>
   <p>Mesto održavanja: {{ turnir.mestoOdrzavanja }}</p>
   <p>Nagrada: {{ turnir.nagrada }}$</p>
-  <p>Maksimalni broj ucesnika: {{ turnir.maxBrojTimova }}</p>
+  <p>Potreban broj timova: {{ turnir.maxBrojTimova }}</p>
   <p>trenutni broj timova: {{ turnir.trenutniBrojTimova }}</p>
   <div container>
     <ul>
