--- a/frontend/src/app/kreiranje-turnira/kreiranje-turnira.component.html
+++ b/frontend/src/app/kreiranje-turnira/kreiranje-turnira.component.html
@@ -32,7 +32,7 @@
       />
     </div>
     <div class="form-group">
-      <label for="maxBrojTimova">Maksimalni broj timova:</label>
+      <label for="maxBrojTimova">Broj timova:</label>
       <input
         type="number"
         id="maxBrojTimova"
