--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -7,6 +7,7 @@
       id="korisnickoIme"
       [(ngModel)]="korisnickoIme"
       name="korisnickoIme"
+      autocomplete="off"
       required
     />
 
@@ -16,6 +17,7 @@
       id="lozinka"
       [(ngModel)]="lozinka"
       name="lozinka"
+      autocomplete="off"
       required
     />
 
