--- a/frontend/src/app/prijava/prijava.component.html
+++ b/frontend/src/app/prijava/prijava.component.html
@@ -2,24 +2,37 @@
   <h2>Turnir</h2>
   <app-turnir [turnir]="turnir"></app-turnir>
 
-  <!-- Dodajte prikaz igracaUTimu$ ispod ovog div-a -->
   <ul>
     <h2>Igraci u timu</h2>
     <li *ngFor="let igrac of igraciUTimu$ | async">
       <app-igrac [igrac]="igrac"></app-igrac>
       <ng-container *ngIf="idTrenutnogKorisnika !== igrac.id">
-        <button (click)="izbaciIgracaIzTima(igrac)">Izbaci iz tima</button>
+        <button
+          (click)="izbaciIgracaIzTima(igrac)"
+          class="custom-button secondary-button"
+        >
+          Izbaci iz tima
+        </button>
       </ng-container>
     </li>
   </ul>
-  <button (click)="navigirajNaIgrace()">Izaberi igrace</button>
+  <div class="button-container">
+    <button
+      (click)="navigirajNaIgrace()"
+      class="custom-button choose-players-button"
+    >
+      Izaberi druge saigrace
+    </button>
+  </div>
 </div>
-<div *ngIf="preference$ | async as preference">
+<div *ngIf="preference$ | async as preference" class="preference-container">
   <h2>Preference</h2>
-  <p>Potreban broj slušalica: {{ preference.potrebanBrojSlusalica }}</p>
-  <p>Potreban broj racunara: {{ preference.potrebanBrojRacunara }}</p>
-  <p>Potreban broj tastatura: {{ preference.potrebanBrojTastatura }}</p>
-  <p>Potreban broj miseva: {{ preference.potrebanBrojMiseva }}</p>
+  <div class="preference-details">
+    <p>Potreban broj slušalica:{{ preference.potrebanBrojSlusalica }}</p>
+    <p>Potreban broj računara:{{ preference.potrebanBrojRacunara }}</p>
+    <p>Potreban broj tastatura:{{ preference.potrebanBrojTastatura }}</p>
+    <p>Potreban broj miševa: {{ preference.potrebanBrojMiseva }}</p>
+  </div>
 </div>
 <label for="nazivTima">naziv tima</label>
 <input
@@ -27,9 +40,14 @@
   id="nazivTima"
   [(ngModel)]="prijava.nazivTima"
   name="nazivTima"
+  autocomplete="off"
   required
 />
 <br />
 <br />
 <br />
-<button (click)="posaljiPrijavu()">Posalji prijavu</button>
+<div class="button-container">
+  <button (click)="posaljiPrijavu()" class="custom-button">
+    Posalji prijavu
+  </button>
+</div>
