--- a/frontend/src/app/preference/preference.component.html
+++ b/frontend/src/app/preference/preference.component.html
@@ -7,6 +7,7 @@
     [(ngModel)]="zeljenePreference.potrebanBrojSlusalica"
     name="potrebanBrojSlusalica"
     min="0"
+    max="3"
   />
   <br />
 
@@ -17,6 +18,7 @@
     [(ngModel)]="zeljenePreference.potrebanBrojRacunara"
     name="potrebanBrojRacunara"
     min="0"
+    max="3"
   />
   <br />
 
@@ -27,6 +29,7 @@
     [(ngModel)]="zeljenePreference.potrebanBrojTastatura"
     name="potrebanBrojTastatura"
     min="0"
+    max="3"
   />
   <br />
 
@@ -37,6 +40,7 @@
     [(ngModel)]="zeljenePreference.potrebanBrojMiseva"
     name="potrebanBrojMiseva"
     min="0"
+    max="3"
   />
   <br />
 
