--- a/frontend/src/app/svi-igraci/svi-igraci.component.html
+++ b/frontend/src/app/svi-igraci/svi-igraci.component.html
@@ -28,6 +28,9 @@
     </button>
   </li>
 </ul>
-<button (click)="navigirajNaPreference()" class="preference-button">
-  Preference
-</button>
+<button (click)="navigirajNaPreference()" class="my-button">Preference</button>
+<div class="button-container">
+  <button (click)="navigirajNaPrijavu()" class="my-button">
+    Idi na prijavu
+  </button>
+</div>
