--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,4 +1,3 @@
-/* You can add global styles to this file, and also import other style files */
 html,
 body {
   height: 100%;
@@ -6,6 +5,6 @@ body {
 body {
   margin: 0;
   font-family: Roboto, sans-serif;
-  background-color: white;
+  background-color: rgb(246, 238, 228);
   color: black;
 }
